RESOLVED FIXED64991
[chromium] Force slow scrolling path for non-composited frames in a composited page
https://bugs.webkit.org/show_bug.cgi?id=64991
Summary [chromium] Force slow scrolling path for non-composited frames in a composite...
James Robinson
Reported 2011-07-21 16:21:40 PDT
[chromium] Force slow scrolling path for non-composited frames in a composited page
Attachments
Patch (2.08 KB, patch)
2011-07-21 16:45 PDT, James Robinson
no flags
more accurate changelog (1.71 KB, patch)
2011-07-21 17:05 PDT, James Robinson
fishd: review+
James Robinson
Comment 1 2011-07-21 16:45:46 PDT
Adrienne Walker
Comment 2 2011-07-21 16:49:57 PDT
*** Bug 64915 has been marked as a duplicate of this bug. ***
Adrienne Walker
Comment 3 2011-07-21 17:05:21 PDT
Comment on attachment 101666 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=101666&action=review Unofficially, the code looks good to me. We could also cut the explanation out and just say we don't handle it. > Source/WebCore/ChangeLog:10 > + The chromium compositor does not properly handle fast path scrolls for non-composited iframe in a composited > + page. In particular, we don't receive invalidations that are outside the viewport bounds for non-composited > + iframes, but we still try to use the contents from tiles that extend outside the viewport when they are scrolled > + in to view. For the main frame we do receive invalidations outside the viewport (see > + FrameView::clipsRepaints()) so everything works out. I thought the larger issue was that we don't handle the different scroll offsets from the main frame and the sub frame. This causes a problem because we're scrolling via redrawing the root directly at the scroll offset rather than scrolling via copying a rectangle from the backbuffer based on the offset that gets passed to WebViewImpl::scrollRootLayerRect.
James Robinson
Comment 4 2011-07-21 17:05:50 PDT
Created attachment 101670 [details] more accurate changelog
James Robinson
Comment 5 2011-07-22 12:26:49 PDT
Note You need to log in before you can comment on or make changes to this bug.