[chromium] Force slow scrolling path for non-composited frames in a composited page https://bugs.webkit.org/show_bug.cgi?id=64991

Reviewed by Darin Fisher.

The chromium compositor does not properly handle fast path scrolls for non-composited iframe in a composited
page.

* page/FrameView.cpp:
(WebCore::FrameView::useSlowRepaints):

Canonical link: https://commits.webkit.org/80776@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91591 268f45cc-cd09-0410-ab3c-d52691b4dbfc